[package]
name = "derive_builder"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true


[[test]]
name = "tests1"
path = "tests/01-parse.rs"

[[test]]
name = "tests2"
path = "tests/02-create-builder.rs"

[[test]]
name = "tests3"
path = "tests/03-call-setters.rs"

[[test]]
name = "tests4"
path = "tests/04-call-build.rs"

[[test]]
name = "tests5"
path = "tests/05-method-chaining.rs"

[[test]]
name = "tests6"
path = "tests/06-optional-field.rs"

# [[test]]
# name = "tests7"
# path = "tests/07-repeated-field.rs"


# [[test]]
# name = "tests8"
# path = "tests/08-unrecognized-attribute.rs"

# [[test]]
# name = "tests9"
# path = "tests/09-unrecognized-attribute.stderr.rs"


[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
quote = "1.0.29"
syn = { version = "2.0.26", features = ["full"] }
# TODO
